<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/topbar"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@+id/btn_return"
            android:layout_width="80dip"
            android:layout_height="35dip"
            android:background="@drawable/back_selector"
            android:text="@string/back"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/exp_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/search_his"
            android:textColor="#ffffff"
            android:textSize="20dip" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="80dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_selector"
            android:text="@string/delete"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adViewLayout"
        android:layout_below="@+id/title"
        android:background="@drawable/background2"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="120dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/multibtn1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:background="#00000000"
                android:text="@string/time"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dip"
                android:background="#00000000"
                android:text="@string/frequency"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rl1"
            android:background="#151B54" />

        <ListView
            android:id="@+id/list1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line"
            android:cacheColorHint="#ffffff"
            android:divider="#ffffff"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:scrollbars="horizontal" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>