<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:background="#ffffff">
   <RelativeLayout
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:background="@drawable/topbar"
      android:layout_height="45dp"
      android:paddingBottom="5dip"
      android:paddingLeft="5dip"
      android:paddingTop="5dip"
      android:paddingRight="5dip">
      <Button
         android:id="@+id/btn_return"
         android:layout_width="80dip"
         android:layout_height="35dip"
         android:text="@string/back"
         android:textColor="#ffffff"
         android:background="@drawable/back_selector"/>
      <TextView
         android:id="@+id/exp_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="Large Text"
         android:textColor="#ffffff"
         android:textSize="20dip" />
      <Button
         android:id="@+id/btn_conjug"
         android:layout_width="80dip"
         android:layout_height="35dip"
         android:textColor="#ffffff"
         android:text="@string/conjugaison"
         android:layout_alignParentRight="true"
         android:background="@drawable/right_selector"/>
   </RelativeLayout>
   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/adViewLayout"
      android:layout_below="@+id/title"
      android:background="@drawable/background2"
      android:orientation="vertical"
      android:padding="5dip" >
      <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
         <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_exp"
            android:textColor="#000000"
            android:textSize="20dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dip"
            />
         <TextView
            android:id = "@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#357EC7"
            android:layout_below="@+id/textView1"/>
         <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_centerHorizontal="true"
            android:textColor="#2B3856"
            android:padding="2dip"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceSmall" />
         <TextView
            android:id="@+id/exp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="Large Text2"
            android:textColor="#000000"
            android:textSize="17dip"
            android:layout_below="@+id/count" />
         <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textColor="#000000"
            android:textSize="20dip"
            android:layout_centerHorizontal="true"
            android:padding="5dip"
            android:layout_below="@+id/exp_text"
            android:visibility="invisible"
            />
         <TextView
            android:id = "@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#357EC7"
            android:layout_below="@+id/textView2"
            android:visibility="invisible"/>
         <TextView
            android:id="@+id/exp_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#000000"
            android:textSize="17dip"
            android:layout_below="@+id/line2"
            />
         <Button
            android:id="@+id/btn_internet"
            android:layout_width="80dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:text="@string/internet"
            android:textColor="#ffffff"
            android:background="@drawable/right_selector"
            android:layout_below="@+id/exp_text2"
            />
      </RelativeLayout>
   </ScrollView>
</RelativeLayout>